# mcp-planer

./: .cursorrules  README.md  main.py  makefile  mcp_config.json  pyproject.toml
.cursor/: mcp.json
src/planer_mcp/: __init__.py  server.py
src/planer_mcp/database/: __init__.py  manager.py  models.py
src/planer_mcp/models/: __init__.py  schemas.py
src/planer_mcp/planning/: __init__.py  engine.py  formatter.py
src/planer_mcp/prompts/: __init__.py  templates.py
tests/: test_planer.py
